--- a/nyuadCourseReview/Base.lproj/Main.storyboard
+++ b/nyuadCourseReview/Base.lproj/Main.storyboard
@@ -147,19 +147,20 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="22h-ZH-Gsy">
-                                <rect key="frame" x="85" y="498" width="150" height="50"/>
+                                <rect key="frame" x="85" y="513" width="150" height="35"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="j73-Hm-qbL"/>
-                                    <constraint firstAttribute="height" constant="50" id="tAe-cc-SeR"/>
+                                    <constraint firstAttribute="height" constant="35" id="tAe-cc-SeR"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="12"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
                                 <state key="normal" title="Search">
                                     <color key="titleColor" red="0.41481143240000001" green="0.123166047" blue="0.62114572530000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="btnDesign" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="btnDesign" value="NO"/>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="purpleBorder" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="btnDesignSmall" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="searchPressed:" destination="7tu-6K-j8C" eventType="touchUpInside" id="Yqi-oq-YSF"/>
@@ -184,9 +185,11 @@
                     <connections>
                         <outlet property="pickerView" destination="fXO-Yl-S6K" id="4Xr-G7-4qP"/>
                         <segue destination="Wuk-Kl-tG2" kind="show" identifier="goToCourses" id="y6n-JU-lLo"/>
+                        <segue destination="QE4-Xw-bDL" kind="unwind" identifier="unwindToLanding" unwindAction="unwindToLandingWithSegue:" id="EE5-rt-p1o"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sfb-GP-A8q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="QE4-Xw-bDL" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1024.8" y="45.42728635682159"/>
         </scene>
@@ -225,7 +228,7 @@
                                             </button>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="136" id="7Y0-un-uNT"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="180" id="7Y0-un-uNT"/>
                                         </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B1H-be-TxK">
@@ -438,6 +441,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="catTitle" destination="NJV-Vn-dOT" id="XLi-pM-tYM"/>
                         <outlet property="tableView" destination="omD-EQ-vDG" id="Hmz-kn-bGn"/>
                         <segue destination="f0I-d8-5wI" kind="show" identifier="goToReview" id="kxB-Z2-zMZ"/>
                         <segue destination="nHF-hd-sXu" kind="show" identifier="gotoViewCourse" id="wIi-Ka-IH6"/>
@@ -1378,7 +1382,7 @@
         <image name="nyuad logo" width="375" height="142"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="muF-vb-Vl9"/>
+        <segue reference="y6n-JU-lLo"/>
         <segue reference="YyO-98-XXD"/>
     </inferredMetricsTieBreakers>
 </document>
